--- a/src/components/inputs/z-input/styles-text.css
+++ b/src/components/inputs/z-input/styles-text.css
@@ -1,7 +1,7 @@
 .text-wrapper > div {
   position: relative;
   z-index: 1;
-  fill: var(--color-default-icon);
+  fill: var(--gray900);
 }
 
 .text-wrapper > div > input {
