--- a/docs/themes/index.stories.css
+++ b/docs/themes/index.stories.css
@@ -29,16 +29,23 @@
 
 .colors-story .color {
   display: flex;
+  width: 35%;
   flex-direction: column;
   align-items: center;
   gap: var(--space-unit);
 }
 
 .colors-story .color-box {
-  width: 240px;
+  width: 100%;
   height: calc(var(--space-unit) * 5);
   border: 1px solid var(--gray400);
   border-radius: 4px;
+}
+
+@media (max-width: 767px) {
+  .colors-story.themes ul {
+    grid-template-columns: 1fr;
+  }
 }
 
 /* palettes */
