--- a/src/components/z-menu-section/styles.css
+++ b/src/components/z-menu-section/styles.css
@@ -110,14 +110,14 @@ when placed below the real text using `flex-direction: column`. */
   outline: none;
 }
 
-.items > ::slotted([slot="item"]:focus:focus-visible) {
+.items > ::slotted([slot="section"]:focus:focus-visible) {
   box-shadow: var(--shadow-focus-primary);
   color: var(--color-secondary01);
 }
 
-.items > ::slotted([slot="item"]:hover),
-.items > ::slotted([slot="item"]:focus:focus-visible),
-.items > ::slotted([slot="item"][active]) {
+.items > ::slotted([slot="section"]:hover),
+.items > ::slotted([slot="section"]:focus:focus-visible),
+.items > ::slotted([slot="section"][active]) {
   color: var(--color-secondary01);
   font-weight: var(--font-bd);
 }
