--- a/src/components/z-modal/styles.css
+++ b/src/components/z-modal/styles.css
@@ -49,7 +49,8 @@
 }
 
 .modal-container > header {
-  padding: calc(var(--space-unit) * 2 - 2px) calc(var(--space-unit) * 2);
+  padding: calc(var(--space-unit) * 3 - 2px) calc(var(--space-unit) * 2) calc(var(--space-unit) + 4px)
+    calc(var(--space-unit) * 2);
   background: var(--color-surface02);
 }
 
@@ -220,17 +221,10 @@
   }
 }
 
-/* Tablet */
-@media only screen and (min-width: 768px) and (max-width: 1151px) {
-  .modal-container > header {
-    padding: calc(var(--space-unit) * 3 - 2px) calc(var(--space-unit) * 3);
-  }
-}
-
 /* Desktop */
 @media only screen and (min-width: 1152px) {
   .modal-container > header {
-    padding: calc(var(--space-unit) * 4 - 4px) calc(var(--space-unit) * 4);
+    padding-top: calc(var(--space-unit) * 3 - 4px);
   }
 
   .modal-container > header h1 {
@@ -247,5 +241,12 @@
 
   .modal-container > header h1 + .subtitle {
     margin-top: 0;
+  }
+}
+
+/* Tablet */
+@media only screen and (min-width: 768px) and (max-width: 1151px) {
+  .modal-container > header {
+    padding-top: calc(var(--space-unit) * 3 - 2px);
   }
 }
