--- a/src/components/z-app-header/styles.css
+++ b/src/components/z-app-header/styles.css
@@ -126,7 +126,7 @@ img.z-logo {
   overflow: hidden;
   padding-right: calc(var(--space-unit) * 2);
   -webkit-box-orient: vertical;
-  font-size: calc(var(--space-unit) * 3);
+  font-size: var(--font-size-6);
   -webkit-line-clamp: 2;
   text-overflow: ellipsis;
   white-space: initial;
@@ -202,7 +202,7 @@ z-searchbar {
 
 .heading-stuck .heading-title > *,
 ::slotted([slot="stucked-title"]) {
-  font-size: calc(var(--space-unit) * 4.5);
+  font-size: var(--font-size-9);
   letter-spacing: calc(-0.6 / 1em);
   line-height: 1.25;
 }
@@ -211,7 +211,7 @@ z-searchbar {
   display: block;
   overflow: hidden;
   margin-right: calc(var(--space-unit) * 2);
-  font-size: calc(var(--space-unit) * 2.5);
+  font-size: var(--font-size-5);
   text-overflow: ellipsis;
   white-space: nowrap;
 }
@@ -297,7 +297,7 @@ z-offcanvas[open] .drawer-content ::slotted(z-menu) {
   }
 
   ::slotted([slot="title"]) {
-    font-size: calc(var(--space-unit) * 4.5);
+    font-size: var(--font-size-9);
   }
 
   .heading-title {
@@ -359,15 +359,11 @@ z-offcanvas[open] .drawer-content ::slotted(z-menu) {
 
   .heading-stuck .heading-title > *,
   .heading-stuck .heading-title [name="stucked-title"] {
-    font-size: calc(var(--space-unit) * 4);
+    font-size: var(--font-size-8);
   }
 
   .heading-stuck-content {
     padding: 6px var(--grid-margin);
-  }
-
-  .heading-title > z-divider.heading-divider {
-    margin: 0 calc(var(--space-unit) * 1.75);
   }
 
   ::slotted([slot="product-logo"]) {
@@ -380,7 +376,7 @@ z-offcanvas[open] .drawer-content ::slotted(z-menu) {
   }
 
   .heading-panel.padding-top-subtitle {
-    padding-top: calc(var(--space-unit) / 2);
+    padding-top: var(--space-unit);
   }
 }
 
@@ -388,10 +384,6 @@ z-offcanvas[open] .drawer-content ::slotted(z-menu) {
 @media (min-width: 1152px) {
   .menu-container {
     margin-top: calc(var(--space-unit) * 2.5);
-  }
-
-  .heading-title > z-divider.heading-divider {
-    margin: 0 calc(var(--space-unit) * 1.5);
   }
 
   ::slotted([slot="product-logo"]) {
