--- a/src/components/z-menu/styles.css
+++ b/src/components/z-menu/styles.css
@@ -65,7 +65,9 @@ button.menu-label {
 }
 
 :host(:is([active], [open])) .menu-label-content ::slotted(*),
-.menu-label:focus-within .menu-label-content ::slotted(*) {
+.menu-label:focus-within .menu-label-content ::slotted(*),
+.menu-label:focus-within .menu-label-content z-icon {
+  color: var(--color-primary01);
   letter-spacing: normal;
 }
 
@@ -133,7 +135,7 @@ when placed below the real text using `flex-direction: column`. */
   appearance: none;
   color: var(--z-menu-label-color);
   font-family: var(--font-family-sans);
-  font-size: calc(var(--space-unit) * 2);
+  font-size: var(--font-size-3);
   font-weight: inherit;
   letter-spacing: 0.36px;
   outline: none;
