--- a/src/components/z-app-header/styles.css
+++ b/src/components/z-app-header/styles.css
@@ -25,6 +25,7 @@
 
   position: relative;
   display: block;
+  box-shadow: 0 2px 4px 0 var(--shadow-color-base);
   color: var(--app-header-text-color);
 }
 
