--- a/src/components/z-modal/styles.css
+++ b/src/components/z-modal/styles.css
@@ -49,7 +49,7 @@
 }
 
 .modal-container > header {
-  padding: calc(var(--space-unit) + 4px) calc(var(--space-unit) * 2) calc(var(--space-unit) + 4px)
+  padding: calc(var(--space-unit) * 1.75) calc(var(--space-unit) * 2) calc(var(--space-unit) * 1.75)
     calc(var(--space-unit) * 2);
   background: var(--color-surface02);
 }
@@ -58,7 +58,6 @@
   padding: 0;
   border: none;
   margin: 0;
-  margin-top: calc(var(--space-unit) + 2px);
   margin-left: auto;
   background: transparent;
   cursor: pointer;
@@ -75,7 +74,7 @@
 .modal-container > header > div {
   display: flex;
   width: 100%;
-  align-items: center;
+  align-items: baseline;
   margin-right: calc(var(--space-unit) * 2);
 }
 
@@ -84,7 +83,7 @@
   padding: 0;
   margin: 0;
   color: var(--color-default-text);
-  font-weight: var(--font-rg);
+  font-weight: var(--font-sb);
 }
 
 .modal-container > header h1 {
@@ -220,17 +219,9 @@
 
 /* Tablet */
 @media only screen and (min-width: 768px) and (max-width: 1151px) {
-  .modal-container > header {
-    padding-top: calc(var(--space-unit) + 4px);
-  }
-
-  .modal-container > header button {
-    margin-top: var(--space-unit);
-  }
-
   .modal-container > header h1 {
     font-size: var(--font-size-5);
-    font-weight: var(--font-rg);
+    font-weight: var(--font-sb);
     letter-spacing: 0;
     line-height: 1.4;
   }
@@ -246,12 +237,13 @@
 /* Desktop */
 @media only screen and (min-width: 1152px) {
   .modal-container > header {
-    padding-top: calc(var(--space-unit) + 4px);
+    padding-top: calc(var(--space-unit) * 1.5);
+    padding-bottom: calc(var(--space-unit) * 1.5);
   }
 
   .modal-container > header h1 {
     font-size: var(--font-size-6);
-    font-weight: var(--font-rg);
+    font-weight: var(--font-sb);
     letter-spacing: 0;
     line-height: 1.333;
   }
@@ -265,9 +257,5 @@
 
   .modal-container > header h1 + .subtitle {
     margin-top: 0;
-  }
-
-  .modal-container > header button {
-    margin-top: var(--space-unit);
   }
 }
