--- a/src/components/z-app-header/styles.css
+++ b/src/components/z-app-header/styles.css
@@ -240,6 +240,11 @@ z-searchbar {
   cursor: pointer;
 }
 
+.drawer-trigger:focus-visible {
+  box-shadow: var(--shadow-focus-primary);
+  outline: none !important;
+}
+
 .drawer-trigger z-icon {
   --z-icon-width: var(--app-header-drawer-trigger-size);
   --z-icon-height: var(--app-header-drawer-trigger-size);
