--- a/src/components/z-searchbar/styles.css
+++ b/src/components/z-searchbar/styles.css
@@ -14,6 +14,11 @@
   box-sizing: border-box;
 }
 
+*:focus {
+  box-shadow: var(--shadow-focus-primary);
+  outline: none !important;
+}
+
 .input-container {
   position: relative;
   display: flex;
