--- a/src/components/css-components/z-link/index.stories.css
+++ b/src/components/css-components/z-link/index.stories.css
@@ -1,3 +1,8 @@
 .z-link-story .z-link {
   font-size: 1rem;
 }
+
+.z-link:focus {
+  box-shadow: var(--shadow-focus-primary);
+  outline: none !important;
+}
