--- a/src/components/z-navigation-tabs/styles.css
+++ b/src/components/z-navigation-tabs/styles.css
@@ -134,7 +134,7 @@ z-navigation-tabs > nav > a {
 
 z-navigation-tabs > nav > *:focus:focus-visible {
   z-index: 1;
-  box-shadow: inset 0 0 4px 3px var(--color-highlight);
+  box-shadow: inset 0 0 4px 3px var(--blue800);
 }
 
 z-navigation-tabs > nav > :not([disabled]):hover {
