--- a/src/snowflakes/myz/z-otp/styles.css
+++ b/src/snowflakes/myz/z-otp/styles.css
@@ -1,3 +1,8 @@
+input:focus {
+  box-shadow: var(--shadow-focus-primary);
+  outline: none !important;
+}
+
 :host {
   font-family: var(--font-family-sans);
   font-weight: var(--font-rg);
