fix: add only to media screen

--- a/src/components/z-notification/styles.css
+++ b/src/components/z-notification/styles.css
@@ -108,7 +108,7 @@
 }
 
 /* Tablet breakpoint */
-@media screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .content-container {
     flex-wrap: nowrap;
   }
