--- a/src/global.css
+++ b/src/global.css
@@ -1,7 +1,7 @@
 /* stylelint-disable-next-line import-notation */
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,700;1,700&display=swap");
-@import "~@zanichelli/albe-design-tokens/dist/tokens.css";
-@import "~@zanichelli/albe-design-tokens/dist/themes/default.css";
-@import "~@zanichelli/albe-design-tokens/dist/themes/black-yellow.css";
-@import "~@zanichelli/albe-design-tokens/dist/themes/dark-default.css";
+@import "./tokens/main.css";
+@import "./themes/default.css";
+@import "./themes/black-yellow.css";
+@import "./themes/dark-default.css";
 @import "components/z-accordion/z-accordion-globals.css";
