refactor: move css-components from src/tokens to src/components

--- a/src/components/css-components/z-fab/styles.css
+++ b/src/components/css-components/z-fab/styles.css
@@ -1,4 +1,4 @@
-/* Default size: big. Default color variant: primary01) */
+/* Default size: big. Default color variant: primary01 */
 .z-fab {
   --z-fab-right-offset: var(--grid-margin);
   --z-fab-bottom-offset: var(--grid-margin);
