--- a/src/tokens/main.css
+++ b/src/tokens/main.css
@@ -4,4 +4,4 @@
 @import "shadows.css";
 @import "borders.css";
 @import "grid.css";
-@import "components/index.css";
+@import "../components/css-components/index.css";
