fix: zfileupload add focus

--- a/src/components/file-upload/z-file-upload/styles.css
+++ b/src/components/file-upload/z-file-upload/styles.css
@@ -38,6 +38,11 @@
   cursor: pointer;
 }
 
+:host .text-container .upload-link:focus-visible {
+  box-shadow: var(--shadow-focus-primary);
+  outline: none !important;
+}
+
 :host .text-container .upload-link-text {
   margin-bottom: var(--space-unit);
 }
